--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     namespace "su.linka.linkapaperboard"
-    compileSdk 34
+    compileSdk 36
+    buildToolsVersion "35.0.1"
     defaultConfig {
         applicationId "su.linka.linkapaperboard"
         minSdk 19
-        targetSdk 34
+        targetSdk 35    
         versionCode 6
         versionName "1.2.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,11 +43,11 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
-    lintOptions {
-        checkReleaseBuilds false
-    }
     testOptions {
         unitTests.includeAndroidResources = true
+    }
+    lint {
+        checkReleaseBuilds false
     }
 }
 
@@ -55,6 +58,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.6.2'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation 'org.robolectric:robolectric:4.12.2'
